fix: adding starflex page

--- a/public/locales/al/translation.json
+++ b/public/locales/al/translation.json
@@ -128,9 +128,43 @@
   },
   "contact": {
     "title": "Na Kontaktoni",
-    "subtitle": "Lidhuni me DoqiSHPK",
+    "subtitle": "Do të donim të dëgjonim nga ju. Kontaktoni me ne për çdo pyetje.",
     "info": "Informacioni i Kontaktit",
-    "description": "Do të donim të dëgjonim nga ju. Kontaktoni me ne për çdo pyetje rreth produkteve dhe shërbimeve tona."
+    "description": "Do të donim të dëgjonim nga ju. Kontaktoni me ne për çdo pyetje rreth produkteve dhe shërbimeve tona.",
+    "location": "Vendndodhja Jonë",
+    "phone": "Telefoni",
+    "email": "Email",
+    "hours": "Orët e Punës",
+    "sendMessage": "Na Dërgoni një Mesazh",
+    "formDescription": "Plotësoni formularin më poshtë dhe ne do t'ju përgjigjemi sa më shpejt të jetë e mundur.",
+    "name": "Emri i Plotë",
+    "namePlaceholder": "Filan Fisteku",
+    "company": "Emri i Kompanisë",
+    "companyPlaceholder": "Kompania Juaj",
+    "subject": "Subjekti",
+    "subjectPlaceholder": "Si mund t'ju ndihmojmë?",
+    "message": "Mesazhi",
+    "messagePlaceholder": "Na tregoni më shumë rreth pyetjes suaj...",
+    "sendButton": "Dërgo Mesazhin",
+    "sending": "Duke dërguar...",
+    "successTitle": "Mesazhi u Dërgua me Sukses!",
+    "successMessage": "Faleminderit që na kontaktuat. Do të përgjigjemi brenda 24 orëve.",
+    "whyContactUs": "Pse të Na Kontaktoni?",
+    "reason1": "Këshilla ekspertësh për zgjedhjen e produkteve",
+    "reason2": "Çmime konkurruese për porosi masive",
+    "reason3": "Dërgim i shpejtë në të gjithë Kosovën dhe rajon",
+    "reason4": "Mbështetje pas shitjes dhe garanci",
+    "reason5": "Zgjidhje të personalizuara për biznesin tuaj",
+    "visitUs": "Vizitoni Sallonin Tonë",
+    "weekdays": "E Hënë - E Premte",
+    "saturday": "E Shtunë",
+    "sunday": "E Diel",
+    "closed": "Mbyllur",
+    "appointmentNote": "Për vizita jashtë orarit të punës, ju lutemi na kontaktoni për të caktuar një takim.",
+    "ctaTitle": "Gati për të Filluar Projektin Tuaj?",
+    "ctaDescription": "Le të diskutojmë se si mund t'ju ndihmojmë të realizoni vizionin tuaj me materialet tona premium.",
+    "callNow": "Telefono Tani",
+    "emailUs": "Na Dërgoni Email"
   },
   "footer": {
     "tagline": "Cilësi që nga 1992",
