--- a/public/locales/bs/translation.json
+++ b/public/locales/bs/translation.json
@@ -127,9 +127,43 @@
   },
   "contact": {
     "title": "Kontaktirajte nas",
-    "subtitle": "Stupite u kontakt sa DoqiSHPK",
+    "subtitle": "Voljeli bismo čuti od vas. Kontaktirajte nas za bilo koja pitanja.",
     "info": "Kontakt informacije",
-    "description": "Voljeli bismo čuti od vas. Kontaktirajte nas za bilo koja pitanja o našim proizvodima i uslugama."
+    "description": "Voljeli bismo čuti od vas. Kontaktirajte nas za bilo koja pitanja o našim proizvodima i uslugama.",
+    "location": "Naša Lokacija",
+    "phone": "Telefon",
+    "email": "Email",
+    "hours": "Radno Vrijeme",
+    "sendMessage": "Pošaljite nam Poruku",
+    "formDescription": "Ispunite formu ispod i mi ćemo vam se javiti u najkraćem mogućem roku.",
+    "name": "Puno Ime",
+    "namePlaceholder": "Marko Marković",
+    "company": "Naziv Firme",
+    "companyPlaceholder": "Vaša Firma",
+    "subject": "Predmet",
+    "subjectPlaceholder": "Kako vam možemo pomoći?",
+    "message": "Poruka",
+    "messagePlaceholder": "Recite nam više o vašem upitu...",
+    "sendButton": "Pošalji Poruku",
+    "sending": "Slanje...",
+    "successTitle": "Poruka Uspješno Poslana!",
+    "successMessage": "Hvala što ste nas kontaktirali. Odgovorit ćemo u roku od 24 sata.",
+    "whyContactUs": "Zašto Nas Kontaktirati?",
+    "reason1": "Stručni savjeti o izboru proizvoda",
+    "reason2": "Konkurentne cijene za veće narudžbe",
+    "reason3": "Brza dostava širom Kosova i regije",
+    "reason4": "Podrška nakon prodaje i garancija",
+    "reason5": "Prilagođena rješenja za vaš biznis",
+    "visitUs": "Posjetite Naš Showroom",
+    "weekdays": "Ponedjeljak - Petak",
+    "saturday": "Subota",
+    "sunday": "Nedjelja",
+    "closed": "Zatvoreno",
+    "appointmentNote": "Za posjete izvan radnog vremena, molimo kontaktirajte nas da zakažete termin.",
+    "ctaTitle": "Spremni za Početak Vašeg Projekta?",
+    "ctaDescription": "Razgovarajmo o tome kako možemo pomoći da ostvarite vašu viziju s našim premium materijalima.",
+    "callNow": "Pozovite Sad",
+    "emailUs": "Pošaljite Email"
   },
   "footer": {
     "tagline": "Kvalitet od 1992",
