--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -128,9 +128,43 @@
   },
   "contact": {
     "title": "Kontaktieren Sie Uns",
-    "subtitle": "Nehmen Sie Kontakt mit DoqiSHPK auf",
+    "subtitle": "Wir würden gerne von Ihnen hören. Kontaktieren Sie uns für alle Anfragen.",
     "info": "Kontaktinformationen",
-    "description": "Wir würden gerne von Ihnen hören. Kontaktieren Sie uns für alle Anfragen zu unseren Produkten und Dienstleistungen."
+    "description": "Wir würden gerne von Ihnen hören. Kontaktieren Sie uns für alle Anfragen zu unseren Produkten und Dienstleistungen.",
+    "location": "Unser Standort",
+    "phone": "Telefon",
+    "email": "Email",
+    "hours": "Öffnungszeiten",
+    "sendMessage": "Senden Sie uns eine Nachricht",
+    "formDescription": "Füllen Sie das untenstehende Formular aus und wir werden uns schnellstmöglich bei Ihnen melden.",
+    "name": "Vollständiger Name",
+    "namePlaceholder": "Max Mustermann",
+    "company": "Firmenname",
+    "companyPlaceholder": "Ihre Firma",
+    "subject": "Betreff",
+    "subjectPlaceholder": "Wie können wir Ihnen helfen?",
+    "message": "Nachricht",
+    "messagePlaceholder": "Erzählen Sie uns mehr über Ihre Anfrage...",
+    "sendButton": "Nachricht Senden",
+    "sending": "Wird gesendet...",
+    "successTitle": "Nachricht Erfolgreich Gesendet!",
+    "successMessage": "Vielen Dank, dass Sie uns kontaktiert haben. Wir werden innerhalb von 24 Stunden antworten.",
+    "whyContactUs": "Warum Uns Kontaktieren?",
+    "reason1": "Expertenberatung zur Produktauswahl",
+    "reason2": "Wettbewerbsfähige Preise für Großbestellungen",
+    "reason3": "Schnelle Lieferung im gesamten Kosovo und der Region",
+    "reason4": "Kundendienst und Garantie",
+    "reason5": "Maßgeschneiderte Lösungen für Ihr Unternehmen",
+    "visitUs": "Besuchen Sie Unseren Showroom",
+    "weekdays": "Montag - Freitag",
+    "saturday": "Samstag",
+    "sunday": "Sonntag",
+    "closed": "Geschlossen",
+    "appointmentNote": "Für Besuche außerhalb der Geschäftszeiten kontaktieren Sie uns bitte, um einen Termin zu vereinbaren.",
+    "ctaTitle": "Bereit, Ihr Projekt zu Starten?",
+    "ctaDescription": "Lassen Sie uns besprechen, wie wir Ihnen helfen können, Ihre Vision mit unseren Premium-Materialien zum Leben zu erwecken.",
+    "callNow": "Jetzt Anrufen",
+    "emailUs": "Email Senden"
   },
   "footer": {
     "tagline": "Qualität seit 1992",
