--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -128,9 +128,43 @@
   },
   "contact": {
     "title": "Contact Us",
-    "subtitle": "Get in touch with DoqiSHPK",
+    "subtitle": "We'd love to hear from you. Get in touch with us for any inquiries.",
     "info": "Contact Information",
-    "description": "We'd love to hear from you. Contact us for any inquiries about our products and services."
+    "description": "We'd love to hear from you. Contact us for any inquiries about our products and services.",
+    "location": "Our Location",
+    "phone": "Phone",
+    "email": "Email",
+    "hours": "Working Hours",
+    "sendMessage": "Send us a Message",
+    "formDescription": "Fill out the form below and we will get back to you as soon as possible.",
+    "name": "Full Name",
+    "namePlaceholder": "John Doe",
+    "company": "Company Name",
+    "companyPlaceholder": "Your Company",
+    "subject": "Subject",
+    "subjectPlaceholder": "How can we help you?",
+    "message": "Message",
+    "messagePlaceholder": "Tell us more about your inquiry...",
+    "sendButton": "Send Message",
+    "sending": "Sending...",
+    "successTitle": "Message Sent Successfully!",
+    "successMessage": "Thank you for contacting us. We will respond within 24 hours.",
+    "whyContactUs": "Why Contact Us?",
+    "reason1": "Expert advice on product selection",
+    "reason2": "Competitive pricing for bulk orders",
+    "reason3": "Fast delivery across Kosovo and region",
+    "reason4": "After-sales support and warranty",
+    "reason5": "Custom solutions for your business",
+    "visitUs": "Visit Our Showroom",
+    "weekdays": "Monday - Friday",
+    "saturday": "Saturday",
+    "sunday": "Sunday",
+    "closed": "Closed",
+    "appointmentNote": "For visits outside business hours, please contact us to schedule an appointment.",
+    "ctaTitle": "Ready to Start Your Project?",
+    "ctaDescription": "Let's discuss how we can help bring your vision to life with our premium materials.",
+    "callNow": "Call Now",
+    "emailUs": "Email Us"
   },
   "footer": {
     "tagline": "Quality Since 1992",
