--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -128,9 +128,43 @@
   },
   "contact": {
     "title": "Contactez-Nous",
-    "subtitle": "Entrez en contact avec DoqiSHPK",
+    "subtitle": "Nous aimerions avoir de vos nouvelles. Contactez-nous pour toute question.",
     "info": "Informations de Contact",
-    "description": "Nous aimerions avoir de vos nouvelles. Contactez-nous pour toute question concernant nos produits et services."
+    "description": "Nous aimerions avoir de vos nouvelles. Contactez-nous pour toute question concernant nos produits et services.",
+    "location": "Notre Emplacement",
+    "phone": "Téléphone",
+    "email": "Email",
+    "hours": "Heures d'Ouverture",
+    "sendMessage": "Envoyez-nous un Message",
+    "formDescription": "Remplissez le formulaire ci-dessous et nous vous répondrons dans les plus brefs délais.",
+    "name": "Nom Complet",
+    "namePlaceholder": "Jean Dupont",
+    "company": "Nom de l'Entreprise",
+    "companyPlaceholder": "Votre Entreprise",
+    "subject": "Sujet",
+    "subjectPlaceholder": "Comment pouvons-nous vous aider?",
+    "message": "Message",
+    "messagePlaceholder": "Parlez-nous de votre demande...",
+    "sendButton": "Envoyer le Message",
+    "sending": "Envoi en cours...",
+    "successTitle": "Message Envoyé avec Succès!",
+    "successMessage": "Merci de nous avoir contactés. Nous répondrons dans les 24 heures.",
+    "whyContactUs": "Pourquoi Nous Contacter?",
+    "reason1": "Conseil d'expert sur la sélection de produits",
+    "reason2": "Prix compétitifs pour les commandes en gros",
+    "reason3": "Livraison rapide au Kosovo et dans la région",
+    "reason4": "Service après-vente et garantie",
+    "reason5": "Solutions personnalisées pour votre entreprise",
+    "visitUs": "Visitez Notre Showroom",
+    "weekdays": "Lundi - Vendredi",
+    "saturday": "Samedi",
+    "sunday": "Dimanche",
+    "closed": "Fermé",
+    "appointmentNote": "Pour les visites en dehors des heures d'ouverture, veuillez nous contacter pour prendre rendez-vous.",
+    "ctaTitle": "Prêt à Démarrer Votre Projet?",
+    "ctaDescription": "Discutons de la manière dont nous pouvons vous aider à concrétiser votre vision avec nos matériaux premium.",
+    "callNow": "Appelez Maintenant",
+    "emailUs": "Envoyez-nous un Email"
   },
   "footer": {
     "tagline": "Qualité depuis 1992",
