--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -128,9 +128,43 @@
   },
   "contact": {
     "title": "Contattaci",
-    "subtitle": "Mettiti in contatto con DoqiSHPK",
+    "subtitle": "Ci piacerebbe sentire da te. Contattaci per qualsiasi domanda.",
     "info": "Informazioni di Contatto",
-    "description": "Ci piacerebbe sentire da te. Contattaci per qualsiasi domanda sui nostri prodotti e servizi."
+    "description": "Ci piacerebbe sentire da te. Contattaci per qualsiasi domanda sui nostri prodotti e servizi.",
+    "location": "La Nostra Sede",
+    "phone": "Telefono",
+    "email": "Email",
+    "hours": "Orari di Apertura",
+    "sendMessage": "Inviaci un Messaggio",
+    "formDescription": "Compila il modulo qui sotto e ti risponderemo il prima possibile.",
+    "name": "Nome Completo",
+    "namePlaceholder": "Mario Rossi",
+    "company": "Nome Azienda",
+    "companyPlaceholder": "La Tua Azienda",
+    "subject": "Oggetto",
+    "subjectPlaceholder": "Come possiamo aiutarti?",
+    "message": "Messaggio",
+    "messagePlaceholder": "Raccontaci di più sulla tua richiesta...",
+    "sendButton": "Invia Messaggio",
+    "sending": "Invio in corso...",
+    "successTitle": "Messaggio Inviato con Successo!",
+    "successMessage": "Grazie per averci contattato. Risponderemo entro 24 ore.",
+    "whyContactUs": "Perché Contattarci?",
+    "reason1": "Consulenza esperta sulla selezione dei prodotti",
+    "reason2": "Prezzi competitivi per ordini all'ingrosso",
+    "reason3": "Consegna rapida in tutto il Kosovo e nella regione",
+    "reason4": "Supporto post-vendita e garanzia",
+    "reason5": "Soluzioni personalizzate per la tua attività",
+    "visitUs": "Visita il Nostro Showroom",
+    "weekdays": "Lunedì - Venerdì",
+    "saturday": "Sabato",
+    "sunday": "Domenica",
+    "closed": "Chiuso",
+    "appointmentNote": "Per visite fuori orario, contattaci per fissare un appuntamento.",
+    "ctaTitle": "Pronto a Iniziare il Tuo Progetto?",
+    "ctaDescription": "Discutiamo di come possiamo aiutarti a realizzare la tua visione con i nostri materiali premium.",
+    "callNow": "Chiama Ora",
+    "emailUs": "Inviaci un'Email"
   },
   "footer": {
     "tagline": "Qualità dal 1992",
