--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -127,9 +127,43 @@
   },
   "contact": {
     "title": "Контактирајте не",
-    "subtitle": "Стапете во контакт со DoqiSHPK",
+    "subtitle": "Сакаме да слушнеме од вас. Контактирајте не за било какви прашања.",
     "info": "Контакт информации",
-    "description": "Сакаме да слушнеме од вас. Контактирајте не за било какви прашања за нашите производи и услуги."
+    "description": "Сакаме да слушнеме од вас. Контактирајте не за било какви прашања за нашите производи и услуги.",
+    "location": "Наша Локација",
+    "phone": "Телефон",
+    "email": "Емаил",
+    "hours": "Работно Време",
+    "sendMessage": "Испратете ни Порака",
+    "formDescription": "Пополнете го формуларот подолу и ние ќе ви одговориме што е можно поскоро.",
+    "name": "Целосно Име",
+    "namePlaceholder": "Марко Марковски",
+    "company": "Име на Компанија",
+    "companyPlaceholder": "Вашата Компанија",
+    "subject": "Предмет",
+    "subjectPlaceholder": "Како можеме да ви помогнеме?",
+    "message": "Порака",
+    "messagePlaceholder": "Кажете ни повеќе за вашето барање...",
+    "sendButton": "Испрати Порака",
+    "sending": "Се испраќа...",
+    "successTitle": "Пораката е Успешно Испратена!",
+    "successMessage": "Ви благодариме што не контактиравте. Ќе одговориме во рок од 24 часа.",
+    "whyContactUs": "Зошто Да Не Контактирате?",
+    "reason1": "Експертски совети за избор на производи",
+    "reason2": "Конкурентни цени за големи нарачки",
+    "reason3": "Брза достава низ Косово и регионот",
+    "reason4": "Поддршка по продажба и гаранција",
+    "reason5": "Приспособени решенија за вашиот бизнис",
+    "visitUs": "Посетете го Нашиот Шоурум",
+    "weekdays": "Понеделник - Петок",
+    "saturday": "Сабота",
+    "sunday": "Недела",
+    "closed": "Затворено",
+    "appointmentNote": "За посети надвор од работното време, ве молиме контактирајте не за да закажете термин.",
+    "ctaTitle": "Подготвени за Почеток на Вашиот Проект?",
+    "ctaDescription": "Ајде да разговараме како можеме да ви помогнеме да ја остварите вашата визија со нашите премиум материјали.",
+    "callNow": "Повикајте Сега",
+    "emailUs": "Испратете Емаил"
   },
   "footer": {
     "tagline": "Квалитет од 1992",
