--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -127,9 +127,43 @@
   },
   "contact": {
     "title": "Контактирајте нас",
-    "subtitle": "Ступите у контакт са DoqiSHPK",
+    "subtitle": "Волели бисмо да чујемо од вас. Контактирајте нас за било која питања.",
     "info": "Контакт информације",
-    "description": "Волели бисмо да чујемо од вас. Контактирајте нас за било која питања о нашим производима и услугама."
+    "description": "Волели бисмо да чујемо од вас. Контактирајте нас за било која питања о нашим производима и услугама.",
+    "location": "Наша Локација",
+    "phone": "Телефон",
+    "email": "Емаил",
+    "hours": "Радно Време",
+    "sendMessage": "Пошаљите нам Поруку",
+    "formDescription": "Попуните формулар испод и ми ћемо вам се јавити у најкраћем могућем року.",
+    "name": "Пуно Име",
+    "namePlaceholder": "Марко Марковић",
+    "company": "Назив Фирме",
+    "companyPlaceholder": "Ваша Фирма",
+    "subject": "Предмет",
+    "subjectPlaceholder": "Како можемо да вам помогнемо?",
+    "message": "Порука",
+    "messagePlaceholder": "Реците нам више о вашем упиту...",
+    "sendButton": "Пошаљи Поруку",
+    "sending": "Шаље се...",
+    "successTitle": "Порука Успешно Послата!",
+    "successMessage": "Хвала што сте нас контактирали. Одговорићемо у року од 24 сата.",
+    "whyContactUs": "Зашто Нас Контактирати?",
+    "reason1": "Стручни савети о избору производа",
+    "reason2": "Конкурентне цене за веће наруџбе",
+    "reason3": "Брза достава широм Косова и региона",
+    "reason4": "Подршка након продаје и гаранција",
+    "reason5": "Прилагођена решења за ваш бизнис",
+    "visitUs": "Посетите Наш Showroom",
+    "weekdays": "Понедељак - Петак",
+    "saturday": "Субота",
+    "sunday": "Недеља",
+    "closed": "Затворено",
+    "appointmentNote": "За посете изван радног времена, молимо контактирајте нас да закажете термин.",
+    "ctaTitle": "Спремни за Почетак Вашег Пројекта?",
+    "ctaDescription": "Разговарајмо о томе како можемо помоћи да остварите вашу визију са нашим премијум материјалима.",
+    "callNow": "Позовите Сад",
+    "emailUs": "Пошаљите Емаил"
   },
   "footer": {
     "tagline": "Квалитет од 1992",
