fix: fix translations

--- a/public/locales/al/translation.json
+++ b/public/locales/al/translation.json
@@ -18,9 +18,9 @@
     "aboutUsTitle": "Rreth Nesh",
     "aboutHeading": "Sipërfaqe të Bëra për të Frymëzuar.",
     "aboutTitle": "Rreth DoqiSHPK",
-    "aboutCompanyDescription": "Doçi Shpk, në partneritet me Starflex, sjell së bashku vite përvojë në prodhimin e mobiljeve dhe dyshekëve me cilësi të lartë. Me një fabrikë moderne, teknologji të avancuar dhe pasion për dizajn, ne ofrojmë ...",
-    "missionDescription": "Doçi Shpk, në partneritet me Starflex, sjell së bashku vite përvojë në prodhimin e mobiljeve dhe dyshekëve me cilësi të lartë. Me një fabrikë moderne, teknologji të avancuar dhe pasion për dizajn, ne ofrojmë",
-    "visionDescription": "Doçi Shpk, në partneritet me Starflex, sjell së bashku vite përvojë në prodhimin e mobiljeve dhe dyshekëve me cilësi të lartë.",
+    "aboutCompanyDescription": "Kompania DOQI u themelua në vitin 1992 në Kosovë, në kushte jashtëzakonisht të vështira. Pavarësisht shkatërrimit të luftës 1998-1999, me përkushtim dhe profesionalizëm, u ngritëm përsëri duke u fokusuar në lëndë të para për mobilje. Në 2011 krijuam markën StarFlex për dyshekë, e në 2013 nisëm shërbimet e prerjes, kantimit dhe CNC, duke u bërë lider në treg dhe shembull i suksesit vendor.",
+    "missionDescription": "Misioni ynë është të zhvillojmë kompaninë duke ofruar produkte e shërbime cilësore në fushën e mobiljeve, me gamë të gjerë lëndësh të para për kuzhinat, dhomat e gjumit, divane, dyer dhe mobilje për zyre e hotele. Ofrojmë dyshekë cilësie të lartë StarFlex dhe bashkëpunojmë me markat më të njohura nga Gjermania, Turqia, Italia, Spanja dhe Greqia.",
+    "visionDescription": "DOQI synon të jetë pika e referencës në Evropë për furnizimin me lëndë të para për mobilje dhe prodhimin e dyshekëve StarFlex. Vizioni ynë është të ndërtojmë një zinxhir vlerash të qëndrueshëm që bashkon cilësinë, inovacionin dhe respektin për mjedisin, duke udhëhequr me përgjegjësi dhe pasion në tregjet europiane.",
     "stat1Label": "Besueshmëria",
     "stat1Description": "Besim dhe kënaqësi e lartë e klientëve",
     "stat2Label": "Nr i produkteve",
