--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -18,6 +18,9 @@
     "aboutUsTitle": "Über uns",
     "aboutHeading": "Oberflächen, die inspirieren.",
     "aboutTitle": "Über DoqiSHPK",
+    "aboutCompanyDescription": "Die Firma DOQI wurde 1992 im Kosovo unter extrem schwierigen Umständen gegründet. Trotz der Zerstörung des Krieges 1998-1999 haben wir uns mit Hingabe und Professionalität wieder aufgebaut, indem wir uns auf Möbelrohstoffe konzentriert haben. 2011 schufen wir die Marke StarFlex für Matratzen, und 2013 starteten wir Schneide-, Kant- und CNC-Dienstleistungen und wurden Marktführer und ein Beispiel für nationalen Erfolg.",
+    "missionDescription": "Unsere Mission ist es, das Unternehmen durch das Anbieten von Qualitätsprodukten und -dienstleistungen im Möbelsektor zu entwickeln, mit einer breiten Palette von Rohstoffen für Küchen, Schlafzimmer, Sofas, Türen und Möbel für Büros und Hotels. Wir bieten hochwertige StarFlex-Matratzen an und arbeiten mit den renommiertesten Marken aus Deutschland, der Türkei, Italien, Spanien und Griechenland zusammen.",
+    "visionDescription": "DOQI strebt an, der Bezugspunkt in Europa für die Lieferung von Möbelrohstoffen und die Produktion von StarFlex-Matratzen zu sein. Unsere Vision ist es, eine nachhaltige Wertschöpfungskette aufzubauen, die Qualität, Innovation und Umweltschutz vereint und mit Verantwortung und Leidenschaft auf europäischen Märkten führt.",
     "aboutDescription1": "Doçi Shpk bringt in Partnerschaft mit Starflex jahrelange Erfahrung in der hochwertigen Möbel- und Matratzenproduktion zusammen. Mit einer modernen Fabrik, fortschrittlicher Technologie und einer Leidenschaft für Design liefern",
     "aboutDescription2": "Doçi Shpk bringt in Partnerschaft mit Starflex jahrelange Erfahrung in der hochwertigen Möbel- und Matratzenproduktion zusammen.",
     "aboutDescription2Short": "Doçi Shpk bringt in Partnerschaft mit Starflex jahrelange Erfahrung in der hochwertigen Möbel- und Matratzenproduktion zusammen.",
