--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,9 +18,9 @@
     "aboutUsTitle": "About Us",
     "aboutHeading": "Surfaces Made to Inspire.",
     "aboutTitle": "About DoqiSHPK",
-    "aboutCompanyDescription": "Doqi Shpk, in partnership with Starflex, brings together years of experience in high-quality furniture and mattress production. With a modern factory, advanced technology, and a passion for design, we delive ...",
-    "missionDescription": "Doqi Shpk, in partnership with Starflex, brings together years of experience in high-quality furniture and mattress production. With a modern factory, advanced technology, and a passion for design, we delive",
-    "visionDescription": "Doqi Shpk, in partnership with Starflex, brings together years of experience in high-quality furniture and mattress production.",
+    "aboutCompanyDescription": "DOQI company was founded in 1992 in Kosovo under extremely difficult circumstances. Despite the destruction of the 1998-1999 war, with dedication and professionalism, we rebuilt by focusing on furniture raw materials. In 2011 we created the StarFlex brand for mattresses, and in 2013 we launched cutting, edging, and CNC services, becoming a market leader and an example of domestic success.",
+    "missionDescription": "Our mission is to develop the company by offering quality products and services in the furniture sector, with a wide range of raw materials for kitchens, bedrooms, sofas, doors, and furniture for offices and hotels. We offer high-quality StarFlex mattresses and collaborate with the most renowned brands from Germany, Turkey, Italy, Spain, and Greece.",
+    "visionDescription": "DOQI aims to be the reference point in Europe for the supply of furniture raw materials and the production of StarFlex mattresses. Our vision is to build a sustainable value chain that combines quality, innovation, and respect for the environment, leading with responsibility and passion in European markets.",
     "stat1Label": "Besueshmeria",
     "stat1Description": "High customer trust and satisfaction",
     "stat2Label": "Nr i produkteve",
