--- a/public/locales/hr/translation.json
+++ b/public/locales/hr/translation.json
@@ -18,6 +18,9 @@
     "aboutUsTitle": "O nama",
     "aboutHeading": "Površine stvorene da inspiriraju.",
     "aboutTitle": "O DoqiSHPK",
+    "aboutCompanyDescription": "Tvrtka DOQI osnovana je 1992. godine na Kosovu u iznimno teškim okolnostima. Unatoč razaranju rata 1998-1999, s predanošću i profesionalnošću, ponovo smo se izgradili fokusirajući se na sirovine za namještaj. 2011. godine stvorili smo brend StarFlex za madrace, a 2013. pokrenuli usluge rezanja, kantovanja i CNC, postavši lider na tržištu i primjer domaćeg uspjeha.",
+    "missionDescription": "Naša misija je razvijati tvrtku nudeći kvalitetne proizvode i usluge u sektoru namještaja, sa širokim asortimanom sirovina za kuhinje, spavaće sobe, sofe, vrata i namještaj za urede i hotele. Nudimo visokokvalitetne StarFlex madrace i surađujemo s najpoznatijim brendovima iz Njemačke, Turske, Italije, Španjolske i Grčke.",
+    "visionDescription": "DOQI teži postati referentna točka u Europi za opskrbu sirovinama za namještaj i proizvodnju StarFlex madraca. Naša vizija je izgraditi održiv lanac vrijednosti koji spaja kvalitetu, inovacije i poštovanje prema okolišu, vodeći s odgovornošću i strašću na europskim tržištima.",
     "aboutDescription1": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i madracea. S modernom tvornicom, naprednom tehnologijom i strašću za dizajn, dostavljamo",
     "aboutDescription2": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i madracea.",
     "aboutDescription2Short": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i madracea.",
