--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -18,6 +18,9 @@
     "aboutUsTitle": "Chi Siamo",
     "aboutHeading": "Superfici create per ispirare.",
     "aboutTitle": "Chi è DoqiSHPK",
+    "aboutCompanyDescription": "L'azienda DOQI è stata fondata nel 1992 in Kosovo in circostanze estremamente difficili. Nonostante la distruzione della guerra del 1998-1999, con dedizione e professionalità, ci siamo ricostruiti concentrandoci sulle materie prime per mobili. Nel 2011 abbiamo creato il marchio StarFlex per materassi, e nel 2013 abbiamo lanciato servizi di taglio, bordatura e CNC, diventando leader di mercato e un esempio di successo nazionale.",
+    "missionDescription": "La nostra missione è sviluppare l'azienda offrendo prodotti e servizi di qualità nel settore dell'arredamento, con una vasta gamma di materie prime per cucine, camere da letto, divani, porte e mobili per uffici e hotel. Offriamo materassi StarFlex di alta qualità e collaboriamo con i marchi più rinomati da Germania, Turchia, Italia, Spagna e Grecia.",
+    "visionDescription": "DOQI mira a essere il punto di riferimento in Europa per la fornitura di materie prime per mobili e la produzione di materassi StarFlex. La nostra visione è costruire una catena del valore sostenibile che unisce qualità, innovazione e rispetto per l'ambiente, guidando con responsabilità e passione nei mercati europei.",
     "aboutDescription1": "Doçi Shpk, in collaborazione con Starflex, unisce anni di esperienza nella produzione di mobili e materassi di alta qualità. Con una fabbrica moderna, tecnologia avanzata e passione per il design, forniamo",
     "aboutDescription2": "Doçi Shpk, in collaborazione con Starflex, unisce anni di esperienza nella produzione di mobili e materassi di alta qualità.",
     "aboutDescription2Short": "Doçi Shpk, in collaborazione con Starflex, unisce anni di esperienza nella produzione di mobili e materassi di alta qualità.",
