--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -18,6 +18,9 @@
     "aboutUsTitle": "За нас",
     "aboutHeading": "Површини креирани да инспирираат.",
     "aboutTitle": "За DoqiSHPK",
+    "aboutCompanyDescription": "Компанијата DOQI беше основана во 1992 година во Косово под исклучително тешки услови. И покрај уништувањето од војната 1998-1999, со посветеност и професионализам, повторно се изградивме фокусирајќи се на суровини за мебел. Во 2011 година ја креиравме марката StarFlex за душеци, а во 2013 година ги стартувавме услугите за сечење, кантирање и CNC, станувајќи лидер на пазарот и пример за домашен успех.",
+    "missionDescription": "Нашата мисија е да ја развиваме компанијата нудејќи квалитетни производи и услуги во секторот за мебел, со широк асортиман на суровини за кујни, спални соби, софи, врати и мебел за канцеларии и хотели. Нудиме висококвалитетни StarFlex душеци и соработуваме со најпознатите брендови од Германија, Турција, Италија, Шпанија и Грција.",
+    "visionDescription": "DOQI има за цел да биде референтна точка во Европа за снабдување со суровини за мебел и производство на StarFlex душеци. Нашата визија е да изградиме одржлив синџир на вредност кој ги спојува квалитетот, иновациите и почитта кон животната средина, водејќи со одговорност и страст на европските пазари.",
     "aboutDescription1": "Doçi Shpk, во партнерство со Starflex, спојува години искуство во производството на високо квалитетни мебел и душеци. Со модерна фабрика, напредна технологија и страст за дизајн, достават",
     "aboutDescription2": "Doçi Shpk, во партнерство со Starflex, спојува години искуство во производството на високо квалитетни мебел и душеци.",
     "aboutDescription2Short": "Doçi Shpk, во партнерство со Starflex, спојува години искуство во производството на високо квалитетни мебел и душеци.",
