--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -18,6 +18,9 @@
     "aboutUsTitle": "О нама",
     "aboutHeading": "Површине креиране да инспиришу.",
     "aboutTitle": "О DoqiSHPK",
+    "aboutCompanyDescription": "Компанија DOQI је основана 1992. године на Косову под изузетно тешким условима. Упркос разарању рата 1998-1999, са посвећеношћу и професионалношћу, поново смо се изградили фокусирајући се на сировине за намештај. 2011. године креирали смо бренд StarFlex за душеке, а 2013. покренули услуге сечења, кантовања и CNC, поставши лидер на тржишту и пример домаћег успеха.",
+    "missionDescription": "Наша мисија је да развијамо компанију нудећи квалитетне производе и услуге у сектору намештаја, са широким асортиманом сировина за кухиње, спаваће собе, софе, врата и намештај за канцеларије и хотеле. Нудимо висококвалитетне StarFlex душеке и сарађујемо са најпознатијим брендовима из Немачке, Турске, Италије, Шпаније и Грчке.",
+    "visionDescription": "DOQI тежи да постане референтна тачка у Европи за снабдевање сировинама за намештај и производњу StarFlex душека. Наша визија је да изградимо одржив ланац вредности који спаја квалитет, иновације и поштовање према животној средини, водећи са одговорношћу и страшћу на европским тржиштима.",
     "aboutDescription1": "Doçi Shpk, у партнерству са Starflex, спаја године искуства у производњи висококвалитетног намештаја и душека. Са модерном фабриком, напредном технологијом и страшћу за дизајн, испоручујемо",
     "aboutDescription2": "Doçi Shpk, у партнерству са Starflex, спаја године искуства у производњи висококвалитетног намештаја и душека.",
     "aboutDescription2Short": "Doçi Shpk, у партнерству са Starflex, спаја године искуства у производњи висококвалитетног намештаја и душека.",
