--- a/public/locales/bs/translation.json
+++ b/public/locales/bs/translation.json
@@ -18,6 +18,9 @@
     "aboutUsTitle": "O nama",
     "aboutHeading": "Površine kreirane da inspirišu.",
     "aboutTitle": "O DoqiSHPK",
+    "aboutCompanyDescription": "Kompanija DOQI je osnovana 1992. godine na Kosovu u izuzetno teškim okolnostima. Uprkos razaranju rata 1998-1999, sa predanošću i profesionalnošću, ponovo smo se izgradili fokusirajući se na sirovine za namještaj. 2011. godine kreirali smo brend StarFlex za dušeke, a 2013. pokrenuli usluge rezanja, kantovanja i CNC, postavši lider na tržištu i primjer domaćeg uspjeha.",
+    "missionDescription": "Naša misija je razvijati kompaniju nudeći kvalitetne proizvode i usluge u sektoru namještaja, sa širokim asortimanom sirovina za kuhinje, spavaće sobe, sofe, vrata i namještaj za urede i hotele. Nudimo visokokvalitetne StarFlex dušeke i sarađujemo sa najpoznatijim brendovima iz Njemačke, Turske, Italije, Španjolske i Grčke.",
+    "visionDescription": "DOQI teži da postane referentna tačka u Evropi za snabdijevanje sirovinama za namještaj i proizvodnju StarFlex dušeka. Naša vizija je izgraditi održiv lanac vrijednosti koji spaja kvalitet, inovacije i poštovanje prema okolišu, vodeći sa odgovornošću i strašću na evropskim tržištima.",
     "aboutDescription1": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i dušeka. Sa modernom tvornicom, naprednom tehnologijom i strašću za dizajn, isporučujemo",
     "aboutDescription2": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i dušeka.",
     "aboutDescription2Short": "Doçi Shpk, u partnerstvu sa Starflex, spaja godine iskustva u proizvodnji visokokvalitetnog namještaja i dušeka.",
